Bug 150001 - Wiki not working with artists containing slashes in the name
Summary: Wiki not working with artists containing slashes in the name
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (show other bugs)
Version: 1.4.7
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter C. Ndikuwera
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-09-19 13:50 UTC by Ljubomir
Modified: 2007-09-28 16:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ljubomir 2007-09-19 13:50:06 UTC
Version:           1.4.7 (using KDE KDE 3.5.4)
Installed from:    Ubuntu Packages
Compiler:          gcc 4.0.3 (Ubuntu 4.0.3-1ubuntu5)
OS:                Linux

When playing tracks from artists with slashes "/" in their name, like "To/Die/For", the Wikipedia tab in the context browser shows nothing. When clicking the "open in external browser" button on the toolbar, konqueror opens this page:
http://en.wikipedia.org/wiki/To/Die/For (band)
which returns 404.

These addresses work correctly:
http://en.wikipedia.org/wiki/To_Die_For_(band)
http://en.wikipedia.org/wiki/To/Die/For

but this doesn't:
http://en.wikipedia.org/wiki/To/Die/For_(band)
Comment 1 Ljubomir 2007-09-19 13:53:19 UTC
Amarok was built from 1.4.7 tarball, but the KDE is from the Ubuntu packages. Didn't understand the question :(
Comment 2 Peter C. Ndikuwera 2007-09-22 14:17:44 UTC
I accepted to change this, then had a thought:

Is this a problem with wikipedia not having a redirect URL for To/Die/For_(band) or is this a general problem?

Can you give me another example where this fails?
Comment 3 Ljubomir 2007-09-24 13:29:57 UTC
AC/DC fails too, opening:
http://en.wikipedia.org/wiki/AC/DC (band)
Comment 4 Peter C. Ndikuwera 2007-09-28 16:15:38 UTC
*** Bug has been marked as fixed ***.