BUG: 150001

Fix wikipedia URL for artist names with slashes, e.g. AC/DC, To/Die/For

svn path=/branches/stable/extragear/multimedia/amarok/; revision=716323